ordered list of shifts... removed initializeform method...