@@ -4,7 +4,10 @@
  */
 package ServidorApresentacao.Action.teacher.credits;
 
+import java.text.DecimalFormatSymbols;
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.Iterator;
 import java.util.List;
 
@@ -34,42 +37,85 @@ import ServidorApresentacao.Action.sop.utils.SessionUtils;
 /**
  * @author jpvl
  */
-public class ProfessorShipShiftPercentageDispatchAction extends DispatchAction {
+public class ProfessorShipShiftPercentageDispatchAction
+	extends DispatchAction {
 
-	public ActionForward show(ActionMapping mapping, ActionForm form, HttpServletRequest request, HttpServletResponse response)
+	public ActionForward show(
+		ActionMapping mapping,
+		ActionForm form,
+		HttpServletRequest request,
+		HttpServletResponse response)
 		throws Exception {
-		DynaValidatorForm professorshipShiftPercentageForm = (DynaValidatorForm) form;
+		DynaValidatorForm professorshipShiftPercentageForm =
+			(DynaValidatorForm) form;
 
 		InfoExecutionCourse infoExecutionCourse = new InfoExecutionCourse();
-		Integer idInternal = (Integer) professorshipShiftPercentageForm.get("objectCode");
+		Integer idInternal =
+			(Integer) professorshipShiftPercentageForm.get("objectCode");
 		infoExecutionCourse.setIdInternal(idInternal);
 
 		HttpSession session = request.getSession();
 		IUserView userView = SessionUtils.getUserView(request);
-		InfoTeacher infoTeacher = (InfoTeacher) session.getAttribute(SessionConstants.INFO_TEACHER);
+		InfoTeacher infoTeacher =
+			(InfoTeacher) session.getAttribute(SessionConstants.INFO_TEACHER);
 
 		Object args[] = { infoTeacher, infoExecutionCourse };
 
-		List infoShiftPercentageList = (List) ServiceUtils.executeService(userView, "ReadTeacherExecutionCourseShiftsPercentage", args);
+		List infoShiftPercentageList =
+			(List) ServiceUtils.executeService(
+				userView,
+				"ReadTeacherExecutionCourseShiftsPercentage",
+				args);
 
-		//initializeForm(professorshipShiftPercentageForm, infoShiftPercentageList, infoTeacher);
+		Collections.sort(infoShiftPercentageList, new Comparator() {
 
-		request.setAttribute("infoShiftPercentageList", infoShiftPercentageList);
+			public int compare(Object o1, Object o2) {
+				InfoShiftPercentage infoShiftPercentage1 =
+					(InfoShiftPercentage) o1;
+				InfoShiftPercentage infoShiftPercentage2 =
+					(InfoShiftPercentage) o2;
+
+				Integer type1 =
+					infoShiftPercentage1.getShift().getTipo().getTipo();
+				Integer type2 =
+					infoShiftPercentage2.getShift().getTipo().getTipo();
+
+				return type1.intValue() - type2.intValue();
+			}
+		});
+		
+		request.setAttribute(
+			"infoShiftPercentageList",
+			infoShiftPercentageList);
 		return mapping.findForward("showTable");
 	}
 
-	public ActionForward accept(ActionMapping mapping, ActionForm form, HttpServletRequest request, HttpServletResponse response)
+	public ActionForward accept(
+		ActionMapping mapping,
+		ActionForm form,
+		HttpServletRequest request,
+		HttpServletResponse response)
 		throws Exception {
 
 		HttpSession session = request.getSession();
 
 		IUserView userView = SessionUtils.getUserView(request);
-		InfoTeacher infoTeacher = (InfoTeacher) session.getAttribute(SessionConstants.INFO_TEACHER);
+		InfoTeacher infoTeacher =
+			(InfoTeacher) session.getAttribute(SessionConstants.INFO_TEACHER);
 
-		List infoTeacherShiftPercentageList = processForm((DynaActionForm) form, request);
+		List infoTeacherShiftPercentageList =
+			processForm((DynaActionForm) form, request);
 
-		Object[] args = { infoTeacher, getInfoExecutionCourse((DynaActionForm) form), infoTeacherShiftPercentageList };
-		List shiftWithErrors = (List) ServiceUtils.executeService(userView, "AcceptTeacherExecutionCourseShiftPercentage", args);
+		Object[] args =
+			{
+				infoTeacher,
+				getInfoExecutionCourse((DynaActionForm) form),
+				infoTeacherShiftPercentageList };
+		List shiftWithErrors =
+			(List) ServiceUtils.executeService(
+				userView,
+				"AcceptTeacherExecutionCourseShiftPercentage",
+				args);
 
 		if (shiftWithErrors.size() > 0) {
 			ActionErrors actionErrors = new ActionErrors();
@@ -77,14 +123,19 @@ public class ProfessorShipShiftPercentageDispatchAction extends DispatchAction {
 			Iterator iterator = shiftWithErrors.listIterator();
 			while (iterator.hasNext()) {
 				InfoShift infoShift = (InfoShift) iterator.next();
-				actionErrors.add("shiftPercentage", new ActionError("errors.ShiftPercentage", infoShift.getNome()));
+				actionErrors.add(
+					"shiftPercentage",
+					new ActionError(
+						"errors.ShiftPercentage",
+						infoShift.getNome()));
 			}
 
 			saveErrors(request, actionErrors);
-			
-			
+
 			// TODO Para que é que se está a fazer isto?
-			request.setAttribute("objectCode", getInfoExecutionCourse((DynaActionForm) form).getIdInternal());
+			request.setAttribute(
+				"objectCode",
+				getInfoExecutionCourse((DynaActionForm) form).getIdInternal());
 
 			return mapping.getInputForward();
 		}
@@ -98,59 +149,44 @@ public class ProfessorShipShiftPercentageDispatchAction extends DispatchAction {
 		return infoExecutionCourse;
 	}
 
-	/**
-		 * @param professorshipShiftPercentageForm
-		 * @param infoShiftPercentageList
-		 */
-	private void initializeForm(
-		DynaValidatorForm professorshipShiftPercentageForm,
-		List infoShiftPercentageList,
-		InfoTeacher infoTeacher) {
-
-		Integer[] shiftsInternalCodes = new Integer[infoShiftPercentageList.size()];
-
-		for (int i = 0; i < infoShiftPercentageList.size(); i++) {
-			InfoShiftPercentage infoShiftPercentage = (InfoShiftPercentage) infoShiftPercentageList.get(i);
-			shiftsInternalCodes[i] = infoShiftPercentage.getShift().getIdInternal();
-
-			List infoTeacherShiftPercentageList = infoShiftPercentage.getTeacherShiftPercentageList();
-			Iterator iterator = infoTeacherShiftPercentageList.iterator();
-			while (iterator.hasNext()) {
-				InfoTeacherShiftPercentage infoTeacherShiftPercentage = (InfoTeacherShiftPercentage) iterator.next();
-				if (infoTeacherShiftPercentage.getInfoProfessorship().getInfoTeacher().equals(infoTeacher)) {
-					shiftsInternalCodes[i] = infoShiftPercentage.getShift().getIdInternal();
-					break;
-				}
-			}
-		}
-		professorshipShiftPercentageForm.set("shiftProfe	ssorships", shiftsInternalCodes);
-	}
 
 	private List processForm(DynaActionForm form, HttpServletRequest request) {
 		List infoTeacherShiftPercentageList = new ArrayList();
 
-		InfoTeacherShiftPercentage infoTeacherShiftPercentage = new InfoTeacherShiftPercentage();
+		InfoTeacherShiftPercentage infoTeacherShiftPercentage =
+			new InfoTeacherShiftPercentage();
 
-		Integer[] shiftProfessorships = (Integer[]) form.get("shiftProfessorships");
+		Integer[] shiftProfessorships =
+			(Integer[]) form.get("shiftProfessorships");
 
+		DecimalFormatSymbols defaultDecimalFormats = new DecimalFormatSymbols();
+		System.out.println(defaultDecimalFormats.getDecimalSeparator());
 		for (int i = 0; i < shiftProfessorships.length; i++) {
 			Integer shiftInternalCode = shiftProfessorships[i];
 			if (shiftInternalCode != null) {
 				Double percentage = null;
 				try {
-					percentage = Double.valueOf(request.getParameter("percentage_" + shiftInternalCode));
+					System.out.println("Ola=======================");
+					percentage =
+						new Double(
+							Double.parseDouble(
+								request.getParameter(
+									"percentage_" + shiftInternalCode)));
 				} catch (NumberFormatException e) {
-
+					e.printStackTrace(System.out);
+					
 				}
 
 				if (percentage != null) {
-					infoTeacherShiftPercentage = new InfoTeacherShiftPercentage();
+					infoTeacherShiftPercentage =
+						new InfoTeacherShiftPercentage();
 					infoTeacherShiftPercentage.setPercentage(percentage);
 
 					InfoShift infoShift = new InfoShift();
 					infoShift.setIdInternal(shiftInternalCode);
 					infoTeacherShiftPercentage.setInfoShift(infoShift);
-					infoTeacherShiftPercentageList.add(infoTeacherShiftPercentage);
+					infoTeacherShiftPercentageList.add(
+						infoTeacherShiftPercentage);
 				}
 			}
 		}
